# android-opencl-demo

./: .gitmodules  CMakeLists.txt
android-opencl-demo/: main.cc
